src/tests/render_snapshots/snapshots/sabiql__render_snapshots__connection_flow__connection_setup_sqlite_form.snap
---
source: src/tests/render_snapshots/connection_flow.rs
expression: output
---
test_project ▸ - ▸ -                                                                                                                 not loaded | localhost:5432/test
┌ [1] Explorer ─────────────────────────┐[Info] [Cols] [Idx] [FK] [RLS] [Trig] [DDL]                                                                                 
│ Press 'r' to load metadata            │┌ [2] Inspector ───────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│                                       ││(select a table)                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││          ╭ New Connection ────────────────────────────────────────────╮                                                  │
│                                       ││          │                                                            │                                                  │
│                                       ││          │  Type:       [ SQLite                   ▼ ]                │                                                  │
│                                       │└──────────│  Name:       [                            ]                │──────────────────────────────────────────────────┘
│                                       │┌ [3] Resul│  Path:       [ /tmp/app.db                ]                │──────────────────────────────────────────────────┐
│                                       ││(select a │                                                            │                                                  │
│                                       ││          │  Note: Passwords use the OS secret store when supported    │                                                  │
│                                       ││          │                                                            │                                                  │
│                                       ││          ╰ Tab/⇧Tab: Field │ Enter: Toggle │ ^S: Connect │ Esc: Cancel╯                                                  │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
└───────────────────────────────────────┘└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
