src/tests/render_snapshots/snapshots/sabiql__render_snapshots__connection_flow__connection_setup_with_validation_errors.snap
---
source: src/tests/render_snapshots/connection_flow.rs
expression: output
---
test_project ▸ - ▸ -                                                                                                                 not loaded | localhost:5432/test
┌ [1] Explorer ─────────────────────────┐[Info] [Cols] [Idx] [FK] [RLS] [Trig] [DDL]                                                                                 
│ Press 'r' to load metadata            │┌ [2] Inspector ───────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│                                       ││(select a table)                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││          ╭ New Connection ────────────────────────────────────────────╮                                                  │
│                                       ││          │                                                            │                                                  │
│                                       ││          │  Type:       [ PostgreSQL               ▼ ]                │                                                  │
│                                       ││          │  Name:       [                            ]                │                                                  │
│                                       ││          │  Host:       [ empty = psql default       ]                │                                                  │
│                                       ││          │  Port:       [ 5432                       ]                │                                                  │
│                                       │└──────────│  Database:   [                            ] Required       │──────────────────────────────────────────────────┘
│                                       │┌ [3] Resul│  User:       [ empty = psql default       ]                │──────────────────────────────────────────────────┐
│                                       ││(select a │  Password:   [ empty = psql default       ]                │                                                  │
│                                       ││          │  SSL Mode:   [ prefer                   ▼ ]                │                                                  │
│                                       ││          │                                                            │                                                  │
│                                       ││          │  → stub-dsn                                                │                                                  │
│                                       ││          │  Note: Passwords use the OS secret store when supported    │                                                  │
│                                       ││          │                                                            │                                                  │
│                                       ││          ╰ Tab/⇧Tab: Field │ Enter: Toggle │ ^S: Connect │ Esc: Cancel╯                                                  │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
└───────────────────────────────────────┘└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
